--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Login-Registration Template for starting a Nodejs application that requires user account creations. Using mongo database and Jade views with express server",
   "main": "app.js",
   "scripts": {
-    "test": "babel src --out-dir dist && nodemon src/app.js"
+    "dev": "babel src --out-dir dist && node dist/app.js",
+    "test": "babel src --out-dir dist && nodemon dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,21 @@
   },
   "homepage": "https://github.com/rovahrowa/Node-Mongo-Login-Template#readme",
   "dependencies": {
-    "express": "^4.15.2"
+    "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
+    "emailjs": "^1.0.8",
+    "express": "^4.15.2",
+    "jade": "^1.11.0",
+    "moment": "^2.18.1",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.8",
+    "passport": "^0.3.2",
+    "pug": "^2.0.0-rc.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "stylus": "^0.54.5"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
